<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".LoginActivity">

    <FrameLayout
        android:id="@+id/framelogin"
        style="@style/login_fl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etusername"
            style="@style/login_et"
            android:layout_marginTop="50dp"
            android:hint="@string/uname"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etpassword"
            style="@style/login_et"
            android:layout_marginTop="100dp"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnlogin"
            style="@style/login_btn"
            android:layout_marginTop="200dp"
            android:text="@string/loginbtn" />

        <TextView
            android:id="@+id/tverror"
            style="@style/login_tv"
            android:layout_marginTop="165dp"
            android:text=""
            android:textColor="@color/red" />

       <!-- <CheckBox
            android:id="@+id/cbRememberme"
            style="@style/login_cb"
            android:layout_gravity="center|bottom"
            android:text="@string/rememberme" />-->

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/framelogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_people_alt_24"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>